src/tests/snapshots/gitu__tests__reverse__reverse_staged_delta.snap
---
source: src/tests/reverse.rs
expression: out
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   file-one                                                            |
▌@@ -1,3 +1,3 @@                                                                |
▌-blahonga                                                                      |
▌+FOO                                                                           |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 9f4a45e main add file-one                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 1a57c2df7157bd8d

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
