src/tests/snapshots/gitu__tests__reverse__reverse_staged_hunk.snap
---
source: src/tests/reverse.rs
expression: out
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
▌@@ -1,3 +1,3 @@                                                                |
▌-blahonga                                                                      |
▌+FOO                                                                           |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one                                                            |
 @@ -1,3 +1,3 @@                                                                |
 -FOO                                                                           |
 +blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 647232b99f2807df

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
