src/tests/snapshots/gitu__tests__reverse__reverse_staged_line.snap
---
source: src/tests/reverse.rs
expression: out
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
 @@ -1,3 +1,4 @@                                                                |
▌+FOO                                                                           |
  blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one                                                            |
 @@ -1,3 +1,3 @@                                                                |
 -FOO                                                                           |
 +blahonga                                                                      |
  BAR                                                                           |
  BAZ                                                                           |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: 773df6bbbcd5f5ab

[file before]
blahonga
BAR
BAZ

[file after]
FOO
blahonga
BAR
BAZ
