src/tests/snapshots/gitu__tests__reverse__reverse_unstaged_hunk.snap
---
source: src/tests/reverse.rs
expression: out
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 9f4a45e main add file-one                                       Author Name __ |
▌b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse                                                           |
styles_hash: 134b7062bc48884

[file before]
blahonga
BAR
BAZ

[file after]
FOO
BAR
BAZ
