src/tests/snapshots/gitu__tests__reverse__reverse_unstaged_line.snap
---
source: src/tests/reverse.rs
expression: out
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
▌@@ -1,3 +1,4 @@                                                                |
▌ FOO                                                                           |
▌+blahonga                                                                      |
▌ BAR                                                                           |
▌ BAZ                                                                           |
                                                                                |
 Recent commits                                                                 |
 9f4a45e main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: d8eeebb35b94d8e3

[file before]
blahonga
BAR
BAZ

[file after]
FOO
blahonga
BAR
BAZ
